@@ -8,6 +8,7 @@ MovieJukebox 2.5 SNAPSHOT
  - Enhancement   #954 Better handling of regional releases
  - Enhancement  #1723 Option to remove TV Shows from Sets in category listings
  - Enhancement  #1853 Multiple index pages
+ - Enhancement  #1882 Separate index files for each category
  - Enhancement  #1895 AniDbPlugin caches Anime information
  - Fixed defect #1896 AniDbPlugin falls back to Romaji title if no English title exists
  - Enhancement  #1900 Functionality of the KinopoiskPlugin
